--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /frontend/node_modules
+/frontend/package.json
+/frontend/package-lock.json
 /frontend/postcss.config.js
 /frontend/tailwind.config.js
 /backend/magnus.db
